Make sure the survey header doesn't run in to the "tell us more" button on mobile

--- a/src/sa_web/static/sa/css/style.css
+++ b/src/sa_web/static/sa/css/style.css
@@ -686,6 +686,7 @@ article.response footer {
 
 .survey-header {
   color: #203e5a;
+  padding-right: 7em;
 }
 
 .response-label-parking_count {
